parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON global_declaration function_declaration main END SEMICOLON
Rule 2     main -> MAIN main_declared LBRACE statute RBRACE
Rule 3     main_declared -> <empty>
Rule 4     global_declaration -> declaration_statute global_declaration
Rule 5     global_declaration -> empty
Rule 6     declaration_statute -> INT int_declaration SEMICOLON
Rule 7     declaration_statute -> DOUBLE double_declaration SEMICOLON
Rule 8     declaration_statute -> BOOLEAN boolean_declaration SEMICOLON
Rule 9     int_declaration -> ID array int_assignation
Rule 10    double_declaration -> ID array double_assignation
Rule 11    boolean_declaration -> ID array boolean_assignation
Rule 12    array -> LBRACKET CONST_INT RBRACKET array_mult
Rule 13    array -> empty
Rule 14    array_mult -> array
Rule 15    array_u -> LBRACKET expression RBRACKET array_mult_u
Rule 16    array_u -> empty
Rule 17    array_mult_u -> array_u
Rule 18    function -> LPAREN params RPAREN
Rule 19    function -> array_u
Rule 20    params -> expression mult_params
Rule 21    params -> empty
Rule 22    mult_params -> COMMA params
Rule 23    mult_params -> empty
Rule 24    int_assignation -> ASSIGN expression
Rule 25    int_assignation -> empty
Rule 26    double_assignation -> ASSIGN expression
Rule 27    double_assignation -> empty
Rule 28    boolean_assignation -> ASSIGN expression
Rule 29    boolean_assignation -> empty
Rule 30    assignation_statute -> ID array_u ASSIGN expression SEMICOLON
Rule 31    expression -> logical
Rule 32    logical -> relational logical_main
Rule 33    logical_main -> AND logical
Rule 34    logical_main -> OR logical
Rule 35    logical_main -> empty
Rule 36    relational -> sum relational_main
Rule 37    relational_main -> EQUALS relational
Rule 38    relational_main -> LESS relational
Rule 39    relational_main -> GREATER relational
Rule 40    relational_main -> empty
Rule 41    sum -> mult sum_main
Rule 42    sum_main -> PLUS sum
Rule 43    sum_main -> MINUS sum
Rule 44    sum_main -> empty
Rule 45    mult -> term mult_main
Rule 46    mult_main -> MULT mult
Rule 47    mult_main -> DIVIDE mult
Rule 48    mult_main -> empty
Rule 49    term -> CONST_INT
Rule 50    term -> CONST_DOUBLE
Rule 51    term -> CONST_BOOLEAN
Rule 52    term -> ID function
Rule 53    term -> LPAREN expression RPAREN
Rule 54    function_declaration -> function_header function_main
Rule 55    function_declaration -> empty
Rule 56    function_header -> FUNCTION type ID function_declared LPAREN params_declaration RPAREN
Rule 57    function_declared -> <empty>
Rule 58    function_main -> LBRACE statute return_statute RBRACE function_declaration
Rule 59    params_declaration -> param_declaration
Rule 60    params_declaration -> empty
Rule 61    param_declaration -> type ID param_declared mult_params_declaration
Rule 62    param_declared -> <empty>
Rule 63    mult_params_declaration -> COMMA param_declaration
Rule 64    mult_params_declaration -> empty
Rule 65    type -> DOUBLE
Rule 66    type -> INT
Rule 67    type -> BOOLEAN
Rule 68    statute -> if_statute statute
Rule 69    statute -> while_statute statute
Rule 70    statute -> do_while_statute statute
Rule 71    statute -> assignation_statute statute
Rule 72    statute -> declaration_statute statute
Rule 73    statute -> function_statute statute
Rule 74    statute -> comment_statute statute
Rule 75    statute -> graphic_statute statute
Rule 76    statute -> empty
Rule 77    if_statute -> IF LPAREN expression RPAREN LBRACE statute RBRACE else
Rule 78    else -> ELSE LBRACE statute RBRACE
Rule 79    else -> empty
Rule 80    while_statute -> WHILE LPAREN expression RPAREN LBRACE statute RBRACE
Rule 81    do_while_statute -> DO LBRACE statute RBRACE WHILE LPAREN expression RPAREN
Rule 82    return_statute -> RETURN expression SEMICOLON
Rule 83    function_statute -> ID LPAREN params RPAREN SEMICOLON
Rule 84    comment_statute -> COMMENT statute
Rule 85    graphic_statute -> pen_up_statute
Rule 86    graphic_statute -> pen_down_statute
Rule 87    graphic_statute -> pen_size_statute
Rule 88    graphic_statute -> pen_color_statute
Rule 89    graphic_statute -> set_x_statute
Rule 90    graphic_statute -> set_y_statute
Rule 91    graphic_statute -> clear_statute
Rule 92    graphic_statute -> move_on_x_statute
Rule 93    graphic_statute -> move_on_y_statute
Rule 94    graphic_statute -> rotate_to_right_statute
Rule 95    graphic_statute -> rotate_to_left_statute
Rule 96    graphic_statute -> rectangle_statute
Rule 97    graphic_statute -> triangle_statute
Rule 98    graphic_statute -> circle_statute
Rule 99    pen_up_statute -> PENUP LPAREN RPAREN SEMICOLON
Rule 100   pen_down_statute -> PENDOWN LPAREN RPAREN SEMICOLON
Rule 101   pen_size_statute -> PENSIZE LPAREN expression RPAREN SEMICOLON
Rule 102   pen_color_statute -> PENCOLOR LPAREN expression COMMA expression COMMA expression RPAREN SEMICOLON
Rule 103   set_x_statute -> SETX LPAREN expression RPAREN SEMICOLON
Rule 104   set_y_statute -> SETY LPAREN expression RPAREN SEMICOLON
Rule 105   clear_statute -> CLEAR LPAREN RPAREN SEMICOLON
Rule 106   move_on_x_statute -> MOVEONX LPAREN expression RPAREN SEMICOLON
Rule 107   move_on_y_statute -> MOVEONY LPAREN expression RPAREN SEMICOLON
Rule 108   rotate_to_right_statute -> ROTATETORIGHT LPAREN expression RPAREN SEMICOLON
Rule 109   rotate_to_left_statute -> ROTATETOLEFT LPAREN expression RPAREN SEMICOLON
Rule 110   rectangle_statute -> RECTANGLE LPAREN expression COMMA expression RPAREN SEMICOLON
Rule 111   triangle_statute -> TRIANGLE LPAREN expression COMMA expression RPAREN SEMICOLON
Rule 112   circle_statute -> CIRCLE LPAREN expression RPAREN SEMICOLON
Rule 113   empty -> <empty>

Terminals, with rules where they appear

AND                  : 33
ASSIGN               : 24 26 28 30
BOOLEAN              : 8 67
CIRCLE               : 112
CLEAR                : 105
COMMA                : 22 63 102 102 110 111
COMMENT              : 84
CONST_BOOLEAN        : 51
CONST_DOUBLE         : 50
CONST_INT            : 12 49
DIVIDE               : 47
DO                   : 81
DOUBLE               : 7 65
ELSE                 : 78
END                  : 1
EQUALS               : 37
FUNCTION             : 56
GREATER              : 39
ID                   : 1 9 10 11 30 52 56 61 83
IF                   : 77
INT                  : 6 66
LBRACE               : 2 58 77 78 80 81
LBRACKET             : 12 15
LESS                 : 38
LPAREN               : 18 53 56 77 80 81 83 99 100 101 102 103 104 105 106 107 108 109 110 111 112
MAIN                 : 2
MINUS                : 43
MOVEONX              : 106
MOVEONY              : 107
MULT                 : 46
OR                   : 34
PENCOLOR             : 102
PENDOWN              : 100
PENSIZE              : 101
PENUP                : 99
PLUS                 : 42
PROGRAM              : 1
RBRACE               : 2 58 77 78 80 81
RBRACKET             : 12 15
RECTANGLE            : 110
RETURN               : 82
ROTATETOLEFT         : 109
ROTATETORIGHT        : 108
RPAREN               : 18 53 56 77 80 81 83 99 100 101 102 103 104 105 106 107 108 109 110 111 112
SEMICOLON            : 1 1 6 7 8 30 82 83 99 100 101 102 103 104 105 106 107 108 109 110 111 112
SETX                 : 103
SETY                 : 104
TRIANGLE             : 111
WHILE                : 80 81
error                : 

Nonterminals, with rules where they appear

array                : 9 10 11 14
array_mult           : 12
array_mult_u         : 15
array_u              : 17 19 30
assignation_statute  : 71
boolean_assignation  : 11
boolean_declaration  : 8
circle_statute       : 98
clear_statute        : 91
comment_statute      : 74
declaration_statute  : 4 72
do_while_statute     : 70
double_assignation   : 10
double_declaration   : 7
else                 : 77
empty                : 5 13 16 21 23 25 27 29 35 40 44 48 55 60 64 76 79
expression           : 15 20 24 26 28 30 53 77 80 81 82 101 102 102 102 103 104 106 107 108 109 110 110 111 111 112
function             : 52
function_declaration : 1 58
function_declared    : 56
function_header      : 54
function_main        : 54
function_statute     : 73
global_declaration   : 1 4
graphic_statute      : 75
if_statute           : 68
int_assignation      : 9
int_declaration      : 6
logical              : 31 33 34
logical_main         : 32
main                 : 1
main_declared        : 2
move_on_x_statute    : 92
move_on_y_statute    : 93
mult                 : 41 46 47
mult_main            : 45
mult_params          : 20
mult_params_declaration : 61
param_declaration    : 59 63
param_declared       : 61
params               : 18 22 83
params_declaration   : 56
pen_color_statute    : 88
pen_down_statute     : 86
pen_size_statute     : 87
pen_up_statute       : 85
program              : 0
rectangle_statute    : 96
relational           : 32 37 38 39
relational_main      : 36
return_statute       : 58
rotate_to_left_statute : 95
rotate_to_right_statute : 94
set_x_statute        : 89
set_y_statute        : 90
statute              : 2 58 68 69 70 71 72 73 74 75 77 78 80 81 84
sum                  : 36 42 43
sum_main             : 41
term                 : 45
triangle_statute     : 97
type                 : 56 61
while_statute        : 69

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON global_declaration function_declaration main END SEMICOLON

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON global_declaration function_declaration main END SEMICOLON

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON global_declaration function_declaration main END SEMICOLON

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . global_declaration function_declaration main END SEMICOLON
    (4) global_declaration -> . declaration_statute global_declaration
    (5) global_declaration -> . empty
    (6) declaration_statute -> . INT int_declaration SEMICOLON
    (7) declaration_statute -> . DOUBLE double_declaration SEMICOLON
    (8) declaration_statute -> . BOOLEAN boolean_declaration SEMICOLON
    (113) empty -> .

    INT             shift and go to state 6
    DOUBLE          shift and go to state 7
    BOOLEAN         shift and go to state 5
    FUNCTION        reduce using rule 113 (empty -> .)
    MAIN            reduce using rule 113 (empty -> .)

    declaration_statute            shift and go to state 8
    global_declaration             shift and go to state 9
    empty                          shift and go to state 10

state 5

    (8) declaration_statute -> BOOLEAN . boolean_declaration SEMICOLON
    (11) boolean_declaration -> . ID array boolean_assignation

    ID              shift and go to state 12

    boolean_declaration            shift and go to state 11

state 6

    (6) declaration_statute -> INT . int_declaration SEMICOLON
    (9) int_declaration -> . ID array int_assignation

    ID              shift and go to state 14

    int_declaration                shift and go to state 13

state 7

    (7) declaration_statute -> DOUBLE . double_declaration SEMICOLON
    (10) double_declaration -> . ID array double_assignation

    ID              shift and go to state 16

    double_declaration             shift and go to state 15

state 8

    (4) global_declaration -> declaration_statute . global_declaration
    (4) global_declaration -> . declaration_statute global_declaration
    (5) global_declaration -> . empty
    (6) declaration_statute -> . INT int_declaration SEMICOLON
    (7) declaration_statute -> . DOUBLE double_declaration SEMICOLON
    (8) declaration_statute -> . BOOLEAN boolean_declaration SEMICOLON
    (113) empty -> .

    INT             shift and go to state 6
    DOUBLE          shift and go to state 7
    BOOLEAN         shift and go to state 5
    FUNCTION        reduce using rule 113 (empty -> .)
    MAIN            reduce using rule 113 (empty -> .)

    global_declaration             shift and go to state 17
    declaration_statute            shift and go to state 8
    empty                          shift and go to state 10

state 9

    (1) program -> PROGRAM ID SEMICOLON global_declaration . function_declaration main END SEMICOLON
    (54) function_declaration -> . function_header function_main
    (55) function_declaration -> . empty
    (56) function_header -> . FUNCTION type ID function_declared LPAREN params_declaration RPAREN
    (113) empty -> .

    FUNCTION        shift and go to state 18
    MAIN            reduce using rule 113 (empty -> .)

    function_declaration           shift and go to state 19
    function_header                shift and go to state 20
    empty                          shift and go to state 21

state 10

    (5) global_declaration -> empty .

    FUNCTION        reduce using rule 5 (global_declaration -> empty .)
    MAIN            reduce using rule 5 (global_declaration -> empty .)


state 11

    (8) declaration_statute -> BOOLEAN boolean_declaration . SEMICOLON

    SEMICOLON       shift and go to state 22


state 12

    (11) boolean_declaration -> ID . array boolean_assignation
    (12) array -> . LBRACKET CONST_INT RBRACKET array_mult
    (13) array -> . empty
    (113) empty -> .

    LBRACKET        shift and go to state 23
    ASSIGN          reduce using rule 113 (empty -> .)
    SEMICOLON       reduce using rule 113 (empty -> .)

    array                          shift and go to state 24
    empty                          shift and go to state 25

state 13

    (6) declaration_statute -> INT int_declaration . SEMICOLON

    SEMICOLON       shift and go to state 26


state 14

    (9) int_declaration -> ID . array int_assignation
    (12) array -> . LBRACKET CONST_INT RBRACKET array_mult
    (13) array -> . empty
    (113) empty -> .

    LBRACKET        shift and go to state 23
    ASSIGN          reduce using rule 113 (empty -> .)
    SEMICOLON       reduce using rule 113 (empty -> .)

    array                          shift and go to state 27
    empty                          shift and go to state 25

state 15

    (7) declaration_statute -> DOUBLE double_declaration . SEMICOLON

    SEMICOLON       shift and go to state 28


state 16

    (10) double_declaration -> ID . array double_assignation
    (12) array -> . LBRACKET CONST_INT RBRACKET array_mult
    (13) array -> . empty
    (113) empty -> .

    LBRACKET        shift and go to state 23
    ASSIGN          reduce using rule 113 (empty -> .)
    SEMICOLON       reduce using rule 113 (empty -> .)

    array                          shift and go to state 29
    empty                          shift and go to state 25

state 17

    (4) global_declaration -> declaration_statute global_declaration .

    FUNCTION        reduce using rule 4 (global_declaration -> declaration_statute global_declaration .)
    MAIN            reduce using rule 4 (global_declaration -> declaration_statute global_declaration .)


state 18

    (56) function_header -> FUNCTION . type ID function_declared LPAREN params_declaration RPAREN
    (65) type -> . DOUBLE
    (66) type -> . INT
    (67) type -> . BOOLEAN

    DOUBLE          shift and go to state 31
    INT             shift and go to state 30
    BOOLEAN         shift and go to state 32

    type                           shift and go to state 33

state 19

    (1) program -> PROGRAM ID SEMICOLON global_declaration function_declaration . main END SEMICOLON
    (2) main -> . MAIN main_declared LBRACE statute RBRACE

    MAIN            shift and go to state 34

    main                           shift and go to state 35

state 20

    (54) function_declaration -> function_header . function_main
    (58) function_main -> . LBRACE statute return_statute RBRACE function_declaration

    LBRACE          shift and go to state 36

    function_main                  shift and go to state 37

state 21

    (55) function_declaration -> empty .

    MAIN            reduce using rule 55 (function_declaration -> empty .)


state 22

    (8) declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .

    IF              reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    WHILE           reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    DO              reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    ID              reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    INT             reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    DOUBLE          reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    BOOLEAN         reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    COMMENT         reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    PENUP           reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    PENDOWN         reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    PENSIZE         reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    PENCOLOR        reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    SETX            reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    SETY            reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    CLEAR           reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    MOVEONX         reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    MOVEONY         reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    ROTATETORIGHT   reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    ROTATETOLEFT    reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    RECTANGLE       reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    TRIANGLE        reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    CIRCLE          reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    RETURN          reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    RBRACE          reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    FUNCTION        reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)
    MAIN            reduce using rule 8 (declaration_statute -> BOOLEAN boolean_declaration SEMICOLON .)


state 23

    (12) array -> LBRACKET . CONST_INT RBRACKET array_mult

    CONST_INT       shift and go to state 38


state 24

    (11) boolean_declaration -> ID array . boolean_assignation
    (28) boolean_assignation -> . ASSIGN expression
    (29) boolean_assignation -> . empty
    (113) empty -> .

    ASSIGN          shift and go to state 40
    SEMICOLON       reduce using rule 113 (empty -> .)

    boolean_assignation            shift and go to state 39
    empty                          shift and go to state 41

state 25

    (13) array -> empty .

    ASSIGN          reduce using rule 13 (array -> empty .)
    SEMICOLON       reduce using rule 13 (array -> empty .)


state 26

    (6) declaration_statute -> INT int_declaration SEMICOLON .

    IF              reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    WHILE           reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    DO              reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    ID              reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    INT             reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    DOUBLE          reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    BOOLEAN         reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    COMMENT         reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    PENUP           reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    PENDOWN         reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    PENSIZE         reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    PENCOLOR        reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    SETX            reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    SETY            reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    CLEAR           reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    MOVEONX         reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    MOVEONY         reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    ROTATETORIGHT   reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    ROTATETOLEFT    reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    RECTANGLE       reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    TRIANGLE        reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    CIRCLE          reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    RETURN          reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    RBRACE          reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    FUNCTION        reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)
    MAIN            reduce using rule 6 (declaration_statute -> INT int_declaration SEMICOLON .)


state 27

    (9) int_declaration -> ID array . int_assignation
    (24) int_assignation -> . ASSIGN expression
    (25) int_assignation -> . empty
    (113) empty -> .

    ASSIGN          shift and go to state 43
    SEMICOLON       reduce using rule 113 (empty -> .)

    empty                          shift and go to state 44
    int_assignation                shift and go to state 42

state 28

    (7) declaration_statute -> DOUBLE double_declaration SEMICOLON .
